# keanu

./: .gitignore  BUILD_PLAN.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PREPARE_PLAN.md  README.md  TODO.md  biome.json  lens-examples.md  mkdocs.yml  package.json  pyproject.toml  rough-vision.md  silverado.py  soul.md  spine.md  status.md  tsconfig.json
.devcontainer/: devcontainer.json
alignment-planning/: README.md  alignment-reqs.md  phase-a-detection.md  phase-b-memory.md  phase-c-agency.md  scorecard.md
cli/: package.json
cli/src/: index.ts
daemon/: package.json
daemon/src/: config.ts  index.ts  oracle.test.ts  oracle.ts  types.ts
daemon/src/hero/: dream.ts  hero.test.ts  index.ts  session.ts  shift.ts  speak.ts  stance.ts
daemon/src/loop/: index.test.ts  index.ts  system.ts
daemon/src/memory/: disagreement.ts  embed.ts  extract.ts  flush.ts  git.ts  index.ts  markdown.ts  memory.test.ts  scoring.ts  store.ts  vectors.ts
daemon/src/observe/: index.ts
daemon/src/pulse/: bullshit.test.ts  bullshit.ts  deep.test.ts  deep.ts  human.test.ts  human.ts  index.test.ts  index.ts  nudge.ts  truth.test.ts  (+1 more)
detectors/: requirements.txt  serve.py
docs/: ADR-030-three-mind-scoring.md  PLAN.md  index.md  modules.md
examples/: codec_demo.py  lens-examples-rgb.md  reference-examples.md
examples/dualities/: ai.json  root.json
src/keanu/: __init__.py  alive.py  cli.py  context.py  deps.py  errors.py  io.py  keanu-result.md  log.py  mistakes.py  oracle.py  paths.py  pulse.py  rag-implementation-precedents.md  router.py  symbols.py  wellspring.py
src/silverado/: __init__.py
tests/: conftest.py  test_abilities.py  test_ability_schema.py  test_alive.py  test_apigen.py  test_auto_forge.py  test_autocorrect.py  test_behavioral.py  test_bisect.py  test_cache.py  test_changelog.py  test_ci.py  test_cli.py  test_codegen.py  test_completer.py  test_compress.py  test_config.py  test_context.py  test_converge.py  test_coordinate.py  test_corrections.py  test_craft.py  test_database.py  test_decompose.py  test_deps.py  test_depupdate.py  test_diff.py  test_do.py  test_docgen.py  test_dream.py  test_engine_v2.py  test_environ.py  test_errors.py  test_explore.py  test_firstrun.py  test_fixtures.py  test_forge.py  test_forge_upgrades.py  test_git_ability.py  test_githooks.py  (+46 more)
truckbed/logical/: ladder_check.py  role_audit.py
truckbed/tools/: bake.py  coef_engine.py  helix.py
truckbed/wise/: inconsistency_detector.py  safety_theater_detector.py
vscode-ide-companion/: README.md
vscode-ide-companion/src/: diff-manager.ts  extension.test.ts  ide-server.ts  open-files-manager.ts
(+156 files in other folders)
